Use correct address of maven repository.

--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,9 @@
 	
 	<repositories>
 		<repository>
-                        <id>com.thefirstlineofcode.public</id>
-                        <name>TheFirstLineOfCode Repository - Public</name>
-                        <url>http://120.25.166.188/repository/maven-public/</url>
+                        <id>com.thefirstlineofcode.releases</id>
+                        <name>TheFirstLineOfCode Repository - Releases</name>
+                        <url>http://120.25.166.188:9090/repository/maven-releases/</url>
                 </repository>
 		<repository>
                         <id>jcenter</id>
@@ -258,9 +258,9 @@
 	
 	<distributionManagement>
                 <repository>
-                        <id>com.thefirstlineofcode.public</id>
-                        <name>TheFirstLineOfCode Repository - Public</name>
-                        <url>http://120.25.166.188/repository/maven-public/</url>
+                        <id>com.thefirstlineofcode.releases</id>
+                        <name>TheFirstLineOfCode Repository - Releases</name>
+                        <url>http://120.25.166.188:9090/repository/maven-releases/</url>
                 </repository>
         </distributionManagement>	
 </project>
